<resources>
    <string name="app_name">PurrfectMatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sso_singup">Sign up to Purrfect Match</string>
    <string name="sso_email">Email:</string>
    <string name="sso_password">Password:</string>
    <string name="sso_confirm_password">Confirm\nPassword:</string>
    <string name="sso_next">Next</string>
    <string name="Age">Age</string>
    <string name="Name">Name</string>
    <string name="address">Address</string>
    <string name="About">About</string>
    <string name="Signup">Sign up</string>
    <string name="picture">Picture</string>
    <string name="upload">upload</string>
    <string name="watchMap">watch map</string>
    <string name="watchChats">watch chats</string>
    <string name="Update">update</string>
    <string name="Edit">Edit</string>
    <string name="messagePos">1</string>
</resources>