<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupSTwoFragment">

    <TextView
        android:id="@+id/signupSTwo_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signupSTwo_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        android:nextFocusLeft="@+id/signupSTwo_age_np"
        android:nextFocusRight="@+id/signupSTwo_age_np"
        android:nextFocusDown="@+id/signupSTwo_age_np"
        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupSTwo_name_tv"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/signupSTwo_age_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Age"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSTwo_name_tv" />

    <EditText
        android:id="@+id/signupSTwo_age_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_age_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupSTwo_age_tv"
        tools:ignore="SpeakableTextPresentCheck" />

<!--    <NumberPicker-->
<!--        android:id="@+id/age_np"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/Age"-->
<!--        android:textSize="24sp"-->
<!--        android:layout_gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_age_tv"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/signupSTwo_age_tv" />-->

    <TextView
        android:id="@+id/signupSTwo_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSTwo_age_tv" />


    <EditText
        android:id="@+id/signupSTwo_address_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_address_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupSTwo_address_tv"
        tools:ignore="SpeakableTextPresentCheck" />

<!--    <EditText-->
<!--        android:id="@+id/signupSTwo_address_et"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="text"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_address_tv"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/signupSTwo_address_tv"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->

    <TextView
        android:id="@+id/signupSTwo_about_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/About"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSTwo_address_tv" />

    <EditText
        android:id="@+id/signupSTwo_about_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_about_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupSTwo_about_tv"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/signupSTwo_pic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/picture"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSTwo_about_tv" />

    <Button
        android:id="@+id/signupSTwo_upload_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="200dp"
        android:text="@string/upload"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signupSTwo_pic_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signupSTwo_pic_tv" />
    <Button
        android:id="@+id/signupSTwo_signup_btn"
        android:layout_width="105dp"
        android:layout_height="67dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSTwo_pic_tv"
        app:layout_constraintVertical_bias="0.97" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSTwo_pic_tv" />

<!--    <ProgressBar-->
<!--        android:id="@+id/signupSTwo_progressbar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="157dp"-->
<!--        android:layout_height="156dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>